refactored addEvent() and replaced existing code by hand crafted sql queries in order to cut down memory footprint (~1/3 of the objects compared to the old solution) and also sped up things (now 14s [1116 persons, 6 document types]  vs. >4min for the old solution). also eliminated the need for calls to System.gc() which would slow down things even more
git-svn-id: svn+ssh://evolvis.org/scmrepos/svn/veraweb/trunk@330 293e2372-0500-4244-b9aa-80dbbde7b6ea